--- a/style/sheet.css
+++ b/style/sheet.css
@@ -1,5 +1,15 @@
 /* Global variables / Config */
-:root {
+.darkmode {
+  --color-layer: rgba(255, 255, 255, 0.05);
+  --color-unlayer: rgba(0, 0, 0, 0.25);
+  /* Keep the same shadow color regardless of set display mode */
+  --color-background-main: #24242a;
+  --color-border-main: #3e3e3e;
+  --color-text-main: #f2f2f2;
+  --color-text-secondary: rgba(242, 242, 242, 0.5);
+}
+:root,
+.during-screenshot {
   --color-layer: rgba(0, 0, 0, 0.05);
   --color-unlayer: rgba(255, 255, 255, 0.6);
   --color-shadow: rgba(0, 0, 0, 0.1);
@@ -10,15 +20,6 @@
   --color-text-secondary: rgba(33, 33, 33, 0.5);
   --shadow-main: 0 5px 15px 10px var(--color-shadow);
   --shadow-soft: 0 1px 8px 5px var(--color-shadow-soft);
-}
-:not(.during-screenshot) .darkmode {
-  --color-layer: rgba(255, 255, 255, 0.05);
-  --color-unlayer: rgba(0, 0, 0, 0.25);
-  /* Keep the same shadow color regardless of set display mode */
-  --color-background-main: #24242a;
-  --color-border-main: #3e3e3e;
-  --color-text-main: #f2f2f2;
-  --color-text-secondary: rgba(242, 242, 242, 0.5);
 }
 .flex-vert,
 #content-body,
